--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "bson": "^5.2.0",
+    "mongoose": "^7.0.3",
     "next": "13.3.0",
+    "openai": "^3.2.1",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
